tests/baselines/reference/superInConstructorParam1.errors.txt
tests/cases/compiler/superInConstructorParam1.ts(8,3): error TS2377: Constructors for derived classes must contain a 'super' call.
tests/cases/compiler/superInConstructorParam1.ts(8,19): error TS2336: 'super' cannot be referenced in constructor arguments.


==== tests/cases/compiler/superInConstructorParam1.ts (2 errors) ====
    class B {
      public foo(): number {
        return 0;
      }
    }
    
    class C extends B {
      constructor(a = super.foo()) {
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                      ~~~~~
!!! error TS2336: 'super' cannot be referenced in constructor arguments.
      }
    ~~~
!!! error TS2377: Constructors for derived classes must contain a 'super' call.
    }